fix: added StringUtils